--- a/tinyERP/tinyERP/Views/EditOrderView.xaml
+++ b/tinyERP/tinyERP/Views/EditOrderView.xaml
@@ -67,14 +67,12 @@
             <TextBox Grid.Row="2" Grid.Column="1" Margin="10" VerticalAlignment="Bottom"
                      Text="{Binding StateModificationDate, StringFormat={}{0:dd.MM.yyyy}, Mode=OneWay}" IsReadOnly="True" IsEnabled="False" />
 
-            <TabControl Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Margin="10" controls:TabControlHelper.IsUnderlined="True" controls:ControlsHelper.HeaderFontSize="24">
+            <TabControl Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Margin="10" Padding="0,10" BorderThickness="0" controls:TabControlHelper.IsUnderlined="True" controls:ControlsHelper.HeaderFontSize="24">
                 <TabItem Header="Offerten" controls:ControlsHelper.HeaderFontSize="24">
                     <DockPanel>
-                        <Button DockPanel.Dock="Bottom" VerticalAlignment="Bottom" HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}"
-                                Width="40" Height="40" BorderThickness="0" ToolTip="Neue Offerte"
-                                Command="{Binding NewOfferCommand}" ToolTipService.ShowOnDisabled="True">
-                            <iconPacks:PackIconMaterial Kind="PlusCircle" Width="30" Height="30" />
-                        </Button>
+                        <Button DockPanel.Dock="Bottom" VerticalAlignment="Bottom" HorizontalAlignment="Right" Style="{StaticResource HoverCircleButtonChildWindow}"
+                                ToolTip="Neue Offerte" Command="{Binding NewOfferCommand}" ToolTipService.ShowOnDisabled="True"
+                                Content="{iconPacks:PackIconFontAwesome Plus, Width={StaticResource IconSizeSmall}, Height={StaticResource IconSizeSmall}}"/>
                         <ListView Style="{StaticResource ShowMessageWhenEmpty}" ItemsSource="{Binding OfferList}" BorderThickness="0" DockPanel.Dock="Top">
                             <ListView.Resources>
                                 <Style TargetType="GridViewColumnHeader">
@@ -101,11 +99,9 @@
                 </TabItem>
                 <TabItem Header="Auftragsbestätigung" controls:ControlsHelper.HeaderFontSize="24">
                     <DockPanel>
-                        <Button DockPanel.Dock="Bottom" VerticalAlignment="Bottom" HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}"
-                                Width="40" Height="40" BorderThickness="0" ToolTip="{Binding OrderConfToolTip}" 
-                                Command="{Binding NewOrderConfirmationCommand}" ToolTipService.ShowOnDisabled="True">
-                            <iconPacks:PackIconMaterial Kind="PlusCircle" Width="30" Height="30" />
-                        </Button>
+                        <Button DockPanel.Dock="Bottom" VerticalAlignment="Bottom" HorizontalAlignment="Right" Style="{StaticResource HoverCircleButtonChildWindow}"
+                                ToolTip="{Binding OrderConfToolTip}" Command="{Binding NewOrderConfirmationCommand}" ToolTipService.ShowOnDisabled="True"
+                                Content="{iconPacks:PackIconFontAwesome Plus, Width={StaticResource IconSizeSmall}, Height={StaticResource IconSizeSmall}}"/>
                         <ListView Style="{StaticResource ShowMessageWhenEmpty}" ItemsSource="{Binding OrderConfirmationList}" BorderThickness="0"
                                   DockPanel.Dock="Top">
                             <ListView.Resources>
@@ -133,11 +129,9 @@
                 </TabItem>
                 <TabItem Header="Rechnungen" controls:ControlsHelper.HeaderFontSize="24">
                     <DockPanel>
-                        <Button DockPanel.Dock="Bottom" VerticalAlignment="Bottom" HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}"
-                                Width="40" Height="40" BorderThickness="0" ToolTip="Neue Rechnung"
-                                Command="{Binding NewInvoiceCommand}" ToolTipService.ShowOnDisabled="True">
-                            <iconPacks:PackIconMaterial Kind="PlusCircle" Width="30" Height="30" />
-                        </Button>
+                        <Button DockPanel.Dock="Bottom" VerticalAlignment="Bottom" HorizontalAlignment="Right" Style="{StaticResource HoverCircleButtonChildWindow}"
+                                ToolTip="Neue Rechnung" Command="{Binding NewInvoiceCommand}" ToolTipService.ShowOnDisabled="True"
+                                Content="{iconPacks:PackIconFontAwesome Plus, Width={StaticResource IconSizeSmall}, Height={StaticResource IconSizeSmall}}"/>
                         <ListView Style="{StaticResource ShowMessageWhenEmpty}" ItemsSource="{Binding InvoiceList}" BorderThickness="0"
                                   DockPanel.Dock="Top">
                             <ListView.Resources>
@@ -147,13 +141,13 @@
                             </ListView.Resources>
                             <ListView.View>
                                 <GridView>
-                                    <GridViewColumn Header="Rechnungsnummer" DisplayMemberBinding="{Binding InvoiceNumber}" />
-                                    <GridViewColumn Header="Ausstellungsdatum" DisplayMemberBinding="{Binding Document.IssueDate, StringFormat=d}" />
-                                    <GridViewColumn Header="Betrag" DisplayMemberBinding="{Binding Amount, StringFormat=C}" />
+                                    <GridViewColumn Header="Rechnungsnummer" DisplayMemberBinding="{Binding InvoiceNumber}"/>
+                                    <GridViewColumn Header="Ausstellungsdatum" DisplayMemberBinding="{Binding Document.IssueDate, StringFormat=d}"/>
+                                    <GridViewColumn Header="Betrag" DisplayMemberBinding="{Binding Amount, StringFormat=C}"/>
                                     <GridViewColumn Header="Dokumentenlink">
                                         <GridViewColumn.CellTemplate>
                                             <DataTemplate>
-                                                <Button Style="{StaticResource LinkButton}" Content="{Binding Document.RelativePath}"
+                                                <Button Style="{StaticResource LinkButton}" Content="{Binding Document.RelativePath}" Margin="0,2"
                                                         Command="{Binding DataContext.OpenDocumentCommand, RelativeSource={RelativeSource FindAncestor, AncestorType=controls:MetroWindow}}"
                                                         CommandParameter="{Binding Document.RelativePath}" ToolTip="Dokument öffnen" />
                                             </DataTemplate>
@@ -186,16 +180,16 @@
             <Border Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Margin="10" Background="{StaticResource GrayBrush7}"
                     Opacity="0.7" Visibility="{Binding IsNewOrder, Converter={StaticResource BoolToVisConverter}}">
                 <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="24">
-                    Sie müssen den Auftrag speichern,<LineBreak/>
-                    um ihm Dokumente hinzuzufügen.
+                    Sie müssen diesen Auftrag speichern,<LineBreak/>
+                    um Dokumente hinzuzufügen.
                 </TextBlock>
             </Border>
 
             <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="1" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Bottom">
-                <Button Style="{DynamicResource HoverCircleButtonChildWindow}" ToolTip="Auftrag speichern"
+                <Button Style="{StaticResource HoverCircleButtonChildWindow}" ToolTip="Auftrag speichern"
                         Command="{Binding SaveCommand}" CommandParameter="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=controls:MetroWindow}}"
                         Content="{iconPacks:PackIconFontAwesome Check, Width={StaticResource IconSizeSmall}, Height={StaticResource IconSizeSmall}}"/>
-                <Button Style="{DynamicResource HoverCircleButtonChildWindow}" ToolTip="Abbrechen" IsCancel="True"
+                <Button Style="{StaticResource HoverCircleButtonChildWindow}" ToolTip="Abbrechen" IsCancel="True"
                         Content="{iconPacks:PackIconFontAwesome Times, Width={StaticResource IconSizeSmall}, Height={StaticResource IconSizeSmall}}"/>
             </StackPanel>
         </Grid>
