--- a/tinyERP/tinyERP/MainWindow.xaml
+++ b/tinyERP/tinyERP/MainWindow.xaml
@@ -35,7 +35,8 @@
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
-            <Button Tag="0"  Style="{DynamicResource CircleButtonNavigation}" Command="{Binding SwitchTabCommand}" 
+            
+            <Button Grid.Row="0" Tag="0"  Style="{DynamicResource CircleButtonNavigation}" Command="{Binding SwitchTabCommand}" 
                     CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=Tag}"
                     ToolTip="Budgetverwaltung">
                 <Button.IsEnabled>
@@ -46,6 +47,7 @@
                 </Button.IsEnabled>
                 <iconPacks:PackIconMaterial Kind="Cash" Width="50" Height="50" />
             </Button>
+            
             <Button Grid.Row="1" Tag="1"  Style="{DynamicResource CircleButtonNavigation}" Command="{Binding SwitchTabCommand}" 
                     CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=Tag}"
                     ToolTip="Dokumentenverwaltung">
@@ -57,6 +59,7 @@
                 </Button.IsEnabled>
                 <iconPacks:PackIconMaterial Kind="Archive" Width="50" Height="50" />
             </Button>
+            
             <Button Grid.Row="2" Tag="2"  Style="{DynamicResource CircleButtonNavigation}" Command="{Binding SwitchTabCommand}" 
                     CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=Tag}"
                     ToolTip="Kundenverwaltung">
@@ -68,6 +71,7 @@
                 </Button.IsEnabled>
                 <iconPacks:PackIconMaterial Kind="AccountMultiple" Width="50" Height="50" />
             </Button>
+            
             <Button Grid.Row="3" Tag="3"  Style="{DynamicResource CircleButtonNavigation}" Command="{Binding SwitchTabCommand}" 
                     CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=Tag}"
                     ToolTip="Auftragsverwaltung">
@@ -81,10 +85,7 @@
             </Button>
         </Grid>
         <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-            <TabControl Grid.Column="0" Grid.Row="0" x:Name="MainTabControl" SelectedIndex="{Binding SelectedTab}">
+            <TabControl x:Name="MainTabControl" SelectedIndex="{Binding SelectedTab}">
                 <TabItem>
                     <views:BudgetView DataContext="{Binding Path=BudgetViewModel, Mode=OneWay}"/>
                 </TabItem>
